--- a/app.json
+++ b/app.json
@@ -38,7 +38,10 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-sqlite",
+      "expo-audio",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
